Fixing the following design issues 1. The sticky navigation bar appears behind the lightbox modal when the    later shows 2. The cursor changes type only on hovering the image in show details    page 3. Changing the cursor type from pointer to zoom-in

--- a/src/components/ShowDetails/index.css
+++ b/src/components/ShowDetails/index.css
@@ -8,7 +8,6 @@
 
 .show-img-container {
   width: 40%;
-  cursor: pointer;
 }
 .show-details-middle,
 .more-details {
@@ -18,6 +17,7 @@
 .show-img-container img {
   width: 100%;
   height: auto;
+  cursor: zoom-in;
 }
 
 .more-details {
